--- a/other.html
+++ b/other.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Android | Alexey Khanko's Portfolio</title>
+    <title>Other | Alexey Khanko's Portfolio</title>
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="all" href="css/portfolio.css"/>
@@ -51,7 +51,7 @@
             <div class="note">not all projects listed because of privacy and/or old technics</div>
 
 
-            <div class="item android">
+            <div class="item other">
                 <div>
                     <span class="title">chelsenok.com</span>
                     <a class="address" href="index.html" target="_blank"><i
@@ -60,7 +60,7 @@
                 </div>
             </div>
 
-            <div class="item android">
+            <div class="item other">
                 <div>
                     <span class="title">The most interesting things</span>
                     <a class="address" href=""><i
@@ -69,7 +69,7 @@
                 </div>
             </div>
 
-            <div class="item android">
+            <div class="item other">
                 <div>
                     <span class="title">Hello World</span>
                     <a class="address" href=""><i
