--- a/other/pascal.html
+++ b/other/pascal.html
@@ -3,8 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <title>Pascal | Alexey Khanko's Portfolio</title>
+
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" media="all" href="../css/portfolio.css"/>
+    <link rel="stylesheet" type="text/css" media="all" href="../css/main.css"/>
+    <link href='https://fonts.googleapis.com/css?family=Oswald:400,300|Lato:400,300,700' rel='stylesheet'
+          type='text/css'>
 </head>
 <body>
+
+<div id="overlay"></div>
+
+<nav>
+    <ul>
+        <li id="first"><a href="../index.html">Home</a></li>
+        <li><a href="../web.html">Web</a></li>
+        <li><a href="../android.html">Android</a></li>
+        <li><a href="../software.html">Software</a>
+            <ul>
+                <li><a href="../software/cpp.html">C++</a></li>
+                <li><a href="../software/java.html">Java</a></li>
+                <li><a href="../software/csharp.html">C#</a></li>
+            </ul>
+        </li>
+        <li><a href="../other.html">Other</a>
+            <ul>
+                <li><a href="../other/python.html">Python</a></li>
+                <li><a href="../other/pascal.html">Pascal</a></li>
+                <li><a href="../other/documents.html">Documents</a></li>
+            </ul>
+        </li>
+        <li id="last"><a href="../#">Social</a>
+            <ul>
+                <li><a target="_blank" href="http://vk.com/chelsenok">VK</a></li>
+                <li><a target="_blank" href="http://facebook.com/chelsenok">Facebook</a></li>
+                <li><a target="_blank" href="http://instagram.com/alexey.khanko">Instagram</a></li>
+            </ul>
+        </li>
+    </ul>
+</nav>
 
 </body>
 </html>
