--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Alexey Khanko's Portfolio</title>
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" media="all" href="../css/index.css"/>
-    <link rel="stylesheet" type="text/css" media="all" href="../css/main.css"/>
+    <link rel="stylesheet" type="text/css" media="all" href="css/index.css"/>
+    <link rel="stylesheet" type="text/css" media="all" href="css/main.css"/>
     <link href='https://fonts.googleapis.com/css?family=Oswald:400,300|Lato:400,300,700' rel='stylesheet'
           type='text/css'>
 
@@ -20,24 +20,24 @@
 
 <nav>
     <ul>
-        <li><a href="index.html">Home</a></li>
+        <li id="first"><a href="index.html">Home</a></li>
         <li><a href="web.html">Web</a></li>
         <li><a href="android.html">Android</a></li>
-        <li><a href="#">Software</a>
+        <li><a href="software.html">Software</a>
             <ul>
                 <li><a href="software/cpp.html">C++</a></li>
                 <li><a href="software/java.html">Java</a></li>
                 <li><a href="software/csharp.html">C#</a></li>
             </ul>
         </li>
-        <li><a href="#">Other</a>
+        <li><a href="other.html">Other</a>
             <ul>
                 <li><a href="other/python.html">Python</a></li>
                 <li><a href="other/pascal.html">Pascal</a></li>
                 <li><a href="other/documents.html">Documents</a></li>
             </ul>
         </li>
-        <li><a href="#">Social</a>
+        <li id="last"><a href="#contacts">Social</a>
             <ul>
                 <li><a target="_blank" href="http://vk.com/chelsenok">VK</a></li>
                 <li><a target="_blank" href="http://facebook.com/chelsenok">Facebook</a></li>
@@ -106,7 +106,7 @@
         <div id="tags" class="stone">
             <div class="sub-title">Cloud of my knowledge</div>
             <div id="knowledge_cloud">
-                <img src="../images/my_cloud.png" width="500px" height="300px"/>
+                <img src="images/my_cloud.png" width="500px" height="300px"/>
             </div>
         </div>
     </div>
