--- a/software.html
+++ b/software.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Web | Alexey Khanko's Portfolio</title>
+    <title>Software | Alexey Khanko's Portfolio</title>
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="all" href="css/portfolio.css"/>
@@ -43,6 +43,7 @@
     </ul>
 </nav>
 
+
 <div id="main-wrapper" class="container">
     <div class="brick" id="portfolio">
         <div class="big-stone">
@@ -54,7 +55,7 @@
                 <table width="33.33%">
                     <tr>
                         <td>
-                            <div class="item http">
+                            <div class="item software">
                                 <div>
                                     <span class="title">chelsenok.com</span>
                                     <a class="address" href="index.html" target="_blank"><i
@@ -64,12 +65,24 @@
                             </div>
                         </td>
                     </tr>
+                    <tr>
+                        <td>
+                            <div class="item software">
+                                <div>
+                                    <span class="title">The most interesting things</span>
+                                    <a class="address" href=""><i
+                                            class="material-icons">launch</i>View</a>
+                                    <span class="desc">Local project created studying at school.<br>Main idea to show the World Guiness Records with help of good design and structure.<br>Also there are some interesting facts about the nature, science and people.</span>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
                 </table>
 
                 <table width="33.33%">
                     <tr>
                         <td>
-                            <div class="item http">
+                            <div class="item software">
                                 <div>
                                     <span class="title">Hello World</span>
                                     <a class="address" href=""><i
@@ -84,7 +97,19 @@
                 <table width="33.33%">
                     <tr>
                         <td>
-                            <div class="item http">
+                            <div class="item software">
+                                <div>
+                                    <span class="title">chelsenok.com</span>
+                                    <a class="address" href="index.html" target="_blank"><i
+                                            class="material-icons">launch</i>View</a>
+                                    <span class="desc">Current website :)<br>Portfolio for showing to the customer my skills and motivation to work and be ahead.</span>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <div class="item software">
                                 <div>
                                     <span class="title">The most interesting things</span>
                                     <a class="address" href=""><i
@@ -99,5 +124,6 @@
         </div>
     </div>
 </div>
+
 </body>
 </html>
