--- a/android.html
+++ b/android.html
@@ -51,31 +51,51 @@
             <div class="note">not all projects listed because of privacy and/or old technics</div>
 
 
-            <div class="item android">
-                <div>
-                    <span class="title">chelsenok.com</span>
-                    <a class="address" href="index.html" target="_blank"><i
-                            class="material-icons">launch</i>View</a>
-                    <span class="desc">Current website :)<br>Portfolio for showing to the customer my skills and motivation to work and be ahead.</span>
-                </div>
-            </div>
+            <div style="display: flex;">
+                <table width="33.33%">
+                    <tr>
+                        <td>
+                            <div class="item android">
+                                <div>
+                                    <span class="title">New News</span>
+                                    <a class="address" href=""><i
+                                            class="material-icons">launch</i>View</a>
+                                    <span class="desc">App for comfortable reading of the latest news with charming design.<br>The main idea is to separate news to its categories and allow users to save the most interesting ones.</span>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                </table>
 
-            <div class="item android">
-                <div>
-                    <span class="title">The most interesting things</span>
-                    <a class="address" href=""><i
-                            class="material-icons">launch</i>View</a>
-                    <span class="desc">Local project created studying at school.<br>Main idea to show the World Guiness Records with help of good design and structure.<br>Also there are some interesting facts about the nature, science and people.</span>
-                </div>
-            </div>
+                <table width="33.33%">
+                    <tr>
+                        <td>
+                            <div class="item android">
+                                <div>
+                                    <span class="title">Quick Share</span>
+                                    <a class="address" href=""><i
+                                            class="material-icons">launch</i>View</a>
+                                    <span class="desc">If you want to share your file to the audience and all of you have access to the Internet, this instrument is for you.</span>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                </table>
 
-            <div class="item android">
-                <div>
-                    <span class="title">Hello World</span>
-                    <a class="address" href=""><i
-                            class="material-icons">launch</i>View</a>
-                    <span class="desc">The first project of all programmers :)</span>
-                </div>
+                <table width="33.33%">
+                    <tr>
+                        <td>
+                            <div class="item android">
+                                <div>
+                                    <span class="title">Google Material Design</span>
+                                    <a class="address" href=""><i
+                                            class="material-icons">launch</i>View</a>
+                                    <span class="desc">Good instrument for all Android developers.<br>All apps should to follow the Material Design and my product will solve the problem of misunderstanding with official Google Material Deign site.</span>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                </table>
             </div>
         </div>
     </div>
