--- a/other.html
+++ b/other.html
@@ -43,6 +43,7 @@
     </ul>
 </nav>
 
+
 <div id="main-wrapper" class="container">
     <div class="brick" id="portfolio">
         <div class="big-stone">
@@ -50,32 +51,135 @@
             <div class="note">some projects are moved or unavailable</div>
             <div class="note">not all projects listed because of privacy and/or old technics</div>
 
+            <div style="display: flex;">
+                <table width="33.33%">
+                    <tr>
+                        <td>
+                            <div class="item other">
+                                <div>
+                                    <span class="title">Object Drawer</span>
+                                    <a class="address" href=""><i
+                                            class="material-icons">launch</i>View</a>
+                                    <span class="desc">Program draws necessary geometry object with noted sizes.</span>
+                            </div>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <div class="item other">
+                                <div>
+                                    <span class="title">Car Animation</span>
+                                    <a class="address" href=""><i
+                                            class="material-icons">launch</i>View</a>
+                                    <span class="desc">The imitation of going car.</span>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <div class="item other">
+                                <div>
+                                    <span class="title">Wonder of Physics</span>
+                                    <a class="address" href=""><i
+                                            class="material-icons">launch</i>View</a>
+                                    <span class="desc">The most famous people in physics.</span>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <div class="item other">
+                                <div>
+                                    <span class="title">HeliTaker</span>
+                                    <a class="address" href=""><i
+                                            class="material-icons">launch</i>View</a>
+                                    <span class="desc">Cool idea to free our hands from small routines due to portable helicopter which has the goal - to bring their keepers all what the want.</span>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                </table>
 
-            <div class="item other">
-                <div>
-                    <span class="title">chelsenok.com</span>
-                    <a class="address" href="index.html" target="_blank"><i
-                            class="material-icons">launch</i>View</a>
-                    <span class="desc">Current website :)<br>Portfolio for showing to the customer my skills and motivation to work and be ahead.</span>
-                </div>
-            </div>
+                <table width="33.33%">
+                    <tr>
+                        <td>
+                            <div class="item other">
+                                <div>
+                                    <span class="title">Geometry Calculator</span>
+                                    <a class="address" href=""><i
+                                            class="material-icons">launch</i>View</a>
+                                    <span class="desc">Calculates volumes and squares of needed objects.</span>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <div class="item other">
+                                <div>
+                                    <span class="title">"Catch" Game</span>
+                                    <a class="address" href=""><i
+                                            class="material-icons">launch</i>View</a>
+                                    <span class="desc">Try to catch a spider with help of arrows.</span>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <div class="item other">
+                                <div>
+                                    <span class="title">Weather</span>
+                                    <a class="address" href=""><i
+                                            class="material-icons">launch</i>View</a>
+                                    <span class="desc">Know the weather of any location.</span>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                </table>
 
-            <div class="item other">
-                <div>
-                    <span class="title">The most interesting things</span>
-                    <a class="address" href=""><i
-                            class="material-icons">launch</i>View</a>
-                    <span class="desc">Local project created studying at school.<br>Main idea to show the World Guiness Records with help of good design and structure.<br>Also there are some interesting facts about the nature, science and people.</span>
-                </div>
-            </div>
-
-            <div class="item other">
-                <div>
-                    <span class="title">Hello World</span>
-                    <a class="address" href=""><i
-                            class="material-icons">launch</i>View</a>
-                    <span class="desc">The first project of all programmers :)</span>
-                </div>
+                <table width="33.33%">
+                    <tr>
+                        <td>
+                            <div class="item other">
+                                <div>
+                                    <span class="title">Anti-Stress</span>
+                                    <a class="address" href=""><i
+                                            class="material-icons">launch</i>View</a>
+                                    <span class="desc">Animation of moving cube which will calm you after hard working day.</span>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <div class="item other">
+                                <div>
+                                    <span class="title">Fidel Castro</span>
+                                    <a class="address" href=""><i
+                                            class="material-icons">launch</i>View</a>
+                                    <span class="desc">Awesome presentation about awesome political person.</span>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <div class="item other">
+                                <div>
+                                    <span class="title">Crash of USSR</span>
+                                    <a class="address" href=""><i
+                                            class="material-icons">launch</i>View</a>
+                                    <span class="desc">Great material considering facts and reasons of USSR crash.</span>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                </table>
             </div>
         </div>
     </div>
