--- a/other/documents.html
+++ b/other/documents.html
@@ -43,5 +43,73 @@
     </ul>
 </nav>
 
+<div id="main-wrapper" class="container">
+    <div class="brick" id="portfolio">
+        <div class="big-stone">
+            <div class="note">click "View" to view</div>
+            <div class="note">some projects are moved or unavailable</div>
+            <div class="note">not all projects listed because of privacy and/or old technics</div>
+
+            <div style="display: flex;">
+                <table width="33.33%">
+                    <tr>
+                        <td>
+                            <div class="item other">
+                                <div>
+                                    <span class="title">Wonder of Physics</span>
+                                    <a class="address" href=""><i
+                                            class="material-icons">launch</i>View</a>
+                                    <span class="desc">The most famous people in physics.</span>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <div class="item other">
+                                <div>
+                                    <span class="title">Crash of USSR</span>
+                                    <a class="address" href=""><i
+                                            class="material-icons">launch</i>View</a>
+                                    <span class="desc">Great material considering facts and reasons of USSR crash.</span>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                </table>
+
+                <table width="33.33%">
+                    <tr>
+                        <td>
+                            <div class="item other">
+                                <div>
+                                    <span class="title">HeliTaker</span>
+                                    <a class="address" href=""><i
+                                            class="material-icons">launch</i>View</a>
+                                    <span class="desc">Cool idea to free our hands from small routines due to portable helicopter which has the goal - to bring their keepers all what the want.</span>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                </table>
+
+                <table width="33.33%">
+                    <tr>
+                        <td>
+                            <div class="item other">
+                                <div>
+                                    <span class="title">Fidel Castro</span>
+                                    <a class="address" href=""><i
+                                            class="material-icons">launch</i>View</a>
+                                    <span class="desc">Awesome presentation about awesome political person.</span>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
