--- a/other/pascal.html
+++ b/other/pascal.html
@@ -43,5 +43,61 @@
     </ul>
 </nav>
 
+<div id="main-wrapper" class="container">
+    <div class="brick" id="portfolio">
+        <div class="big-stone">
+            <div class="note">click "View" to view</div>
+            <div class="note">some projects are moved or unavailable</div>
+            <div class="note">not all projects listed because of privacy and/or old technics</div>
+
+            <div style="display: flex;">
+                <table width="33.33%">
+                    <tr>
+                        <td>
+                            <div class="item other">
+                                <div>
+                                    <span class="title">Car Animation</span>
+                                    <a class="address" href=""><i
+                                            class="material-icons">launch</i>View</a>
+                                    <span class="desc">The imitation of going car.</span>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                </table>
+
+                <table width="33.33%">
+                    <tr>
+                        <td>
+                            <div class="item other">
+                                <div>
+                                    <span class="title">Geometry Calculator</span>
+                                    <a class="address" href=""><i
+                                            class="material-icons">launch</i>View</a>
+                                    <span class="desc">Calculates volumes and squares of needed objects.</span>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                </table>
+
+                <table width="33.33%">
+                    <tr>
+                        <td>
+                            <div class="item other">
+                                <div>
+                                    <span class="title">Object Drawer</span>
+                                    <a class="address" href=""><i
+                                            class="material-icons">launch</i>View</a>
+                                    <span class="desc">Program draws necessary geometry object with noted sizes.</span>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
