--- a/software.html
+++ b/software.html
@@ -57,10 +57,10 @@
                         <td>
                             <div class="item software">
                                 <div>
-                                    <span class="title">chelsenok.com</span>
-                                    <a class="address" href="index.html" target="_blank"><i
+                                    <span class="title">Processes</span>
+                                    <a class="address" href=""><i
                                             class="material-icons">launch</i>View</a>
-                                    <span class="desc">Current website :)<br>Portfolio for showing to the customer my skills and motivation to work and be ahead.</span>
+                                    <span class="desc">Laboratory Work to show how much processes are running in the system at the moment and getting full info about each one.</span>
                                 </div>
                             </div>
                         </td>
@@ -69,10 +69,34 @@
                         <td>
                             <div class="item software">
                                 <div>
-                                    <span class="title">The most interesting things</span>
+                                    <span class="title">Words Game</span>
                                     <a class="address" href=""><i
                                             class="material-icons">launch</i>View</a>
-                                    <span class="desc">Local project created studying at school.<br>Main idea to show the World Guiness Records with help of good design and structure.<br>Also there are some interesting facts about the nature, science and people.</span>
+                                    <span class="desc">Simple game the main goal of which is to create new words from given.</span>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <div class="item software">
+                                <div>
+                                    <span class="title">Parsing Math</span>
+                                    <a class="address" href=""><i
+                                            class="material-icons">launch</i>View</a>
+                                    <span class="desc">Simple calculator.</span>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <div class="item software">
+                                <div>
+                                    <span class="title">Eratosphen</span>
+                                    <a class="address" href=""><i
+                                            class="material-icons">launch</i>View</a>
+                                    <span class="desc">Task is considered to such problem as finding quadro of the number.</span>
                                 </div>
                             </div>
                         </td>
@@ -84,10 +108,34 @@
                         <td>
                             <div class="item software">
                                 <div>
-                                    <span class="title">Hello World</span>
+                                    <span class="title">Twitter Tweets</span>
                                     <a class="address" href=""><i
                                             class="material-icons">launch</i>View</a>
-                                    <span class="desc">The first project of all programmers :)</span>
+                                    <span class="desc">The hardest one from this all stuff. Project has been creating in collaborating with Nikita Hayko.<br>Idea is processing of twitter tweets in case of giving each one the special grade which means the mood of the tweet. After grade flows to the US map to draw tweet state in mood color.<br>Works amazing!</span>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <div class="item software">
+                                <div>
+                                    <span class="title">Text Separator</span>
+                                    <a class="address" href=""><i
+                                            class="material-icons">launch</i>View</a>
+                                    <span class="desc">First program for having skills in Object Oriented Programming. Text separated on sentences. They in their turn into words. And finally words divided on symbols.</span>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <div class="item software">
+                                <div>
+                                    <span class="title">Top Eleven</span>
+                                    <a class="address" href=""><i
+                                            class="material-icons">launch</i>View</a>
+                                    <span class="desc">Logical task the main problem of which is to output all numbers of user inputted digits which is divided on 11 in rising order.</span>
                                 </div>
                             </div>
                         </td>
@@ -99,10 +147,10 @@
                         <td>
                             <div class="item software">
                                 <div>
-                                    <span class="title">chelsenok.com</span>
-                                    <a class="address" href="index.html" target="_blank"><i
+                                    <span class="title">Let's Cook</span>
+                                    <a class="address" href=""><i
                                             class="material-icons">launch</i>View</a>
-                                    <span class="desc">Current website :)<br>Portfolio for showing to the customer my skills and motivation to work and be ahead.</span>
+                                    <span class="desc">If you are eager of cooking this product is for you.</span>
                                 </div>
                             </div>
                         </td>
@@ -111,10 +159,22 @@
                         <td>
                             <div class="item software">
                                 <div>
-                                    <span class="title">The most interesting things</span>
+                                    <span class="title">Cataloguer</span>
                                     <a class="address" href=""><i
                                             class="material-icons">launch</i>View</a>
-                                    <span class="desc">Local project created studying at school.<br>Main idea to show the World Guiness Records with help of good design and structure.<br>Also there are some interesting facts about the nature, science and people.</span>
+                                    <span class="desc">Every person like books, movies and other kinds of this stuff. This desktop program will help you to store your favorite ones in beautiful manner.</span>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <div class="item software">
+                                <div>
+                                    <span class="title">Sequence</span>
+                                    <a class="address" href=""><i
+                                            class="material-icons">launch</i>View</a>
+                                    <span class="desc">Very good logical problem which was solved.</span>
                                 </div>
                             </div>
                         </td>
