--- a/software/csharp.html
+++ b/software/csharp.html
@@ -43,5 +43,76 @@
     </ul>
 </nav>
 
+
+
+<div id="main-wrapper" class="container">
+    <div class="brick" id="portfolio">
+        <div class="big-stone">
+            <div class="note">click "View" to view</div>
+            <div class="note">some projects are moved or unavailable</div>
+            <div class="note">not all projects listed because of privacy and/or old technics</div>
+
+            <div style="display: flex;">
+                <table width="33.33%">
+                    <tr>
+                        <td>
+                            <div class="item software">
+                                <div>
+                                    <span class="title">Processes</span>
+                                    <a class="address" href=""><i
+                                            class="material-icons">launch</i>View</a>
+                                    <span class="desc">Laboratory Work to show how much processes are running in the system at the moment and getting full info about each one.</span>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                </table>
+
+                <table width="33.33%">
+                    <tr>
+                        <td>
+                            <div class="item software">
+                                <div>
+                                    <span class="title">Cataloguer</span>
+                                    <a class="address" href=""><i
+                                            class="material-icons">launch</i>View</a>
+                                    <span class="desc">Every person like books, movies and other kinds of this stuff. This desktop program will help you to store your favorite ones in beautiful manner.</span>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                </table>
+
+                <table width="33.33%">
+                    <tr>
+                        <td>
+                            <div class="item software">
+                                <div>
+                                    <span class="title">Let's Cook</span>
+                                    <a class="address" href=""><i
+                                            class="material-icons">launch</i>View</a>
+                                    <span class="desc">If you are eager of cooking this product is for you.</span>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <div class="item software">
+                                <div>
+                                    <span class="title">Words Game</span>
+                                    <a class="address" href=""><i
+                                            class="material-icons">launch</i>View</a>
+                                    <span class="desc">Simple game the main goal of which is to create new words from given.</span>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
