--- a/software/java.html
+++ b/software/java.html
@@ -43,5 +43,52 @@
     </ul>
 </nav>
 
+
+<div id="main-wrapper" class="container">
+    <div class="brick" id="portfolio">
+        <div class="big-stone">
+            <div class="note">click "View" to view</div>
+            <div class="note">some projects are moved or unavailable</div>
+            <div class="note">not all projects listed because of privacy and/or old technics</div>
+
+            <div style="display: flex;">
+                <table width="33.33%">
+                    <tr>
+                        <td>
+                            <div class="item software">
+                                <div>
+                                    <span class="title">Twitter Tweets</span>
+                                    <a class="address" href=""><i
+                                            class="material-icons">launch</i>View</a>
+                                    <span class="desc">The hardest one from this all stuff. Project has been creating in collaborating with Nikita Hayko.<br>Idea is processing of twitter tweets in case of giving each one the special grade which means the mood of the tweet. After grade flows to the US map to draw tweet state in mood color.<br>Works amazing!</span>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                </table>
+
+                <table width="33.33%">
+                    <tr>
+                        <td>
+                            <div class="item software">
+                                <div>
+                                    <span class="title">Text Separator</span>
+                                    <a class="address" href=""><i
+                                            class="material-icons">launch</i>View</a>
+                                    <span class="desc">First program for having skills in Object Oriented Programming. Text separated on sentences. They in their turn into words. And finally words divided on symbols.</span>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                </table>
+
+                <table width="33.33%">
+                    <tr><td></td></tr>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
