--- a/web.html
+++ b/web.html
@@ -79,6 +79,18 @@
                             </div>
                         </td>
                     </tr>
+                    <tr>
+                        <td>
+                            <div class="item http">
+                                <div>
+                                    <span class="title">Belovezhskaya Puszha</span>
+                                    <a class="address" href=""><i
+                                            class="material-icons">launch</i>View</a>
+                                    <span class="desc">Site for description of Belovezhskaya Puszha district to show all goodness and calmness of this beautiful place.<br>School practice.</span>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
                 </table>
 
                 <table width="33.33%">
