--- a/software/cpp.html
+++ b/software/cpp.html
@@ -43,5 +43,76 @@
     </ul>
 </nav>
 
+
+
+<div id="main-wrapper" class="container">
+    <div class="brick" id="portfolio">
+        <div class="big-stone">
+            <div class="note">click "View" to view</div>
+            <div class="note">some projects are moved or unavailable</div>
+            <div class="note">not all projects listed because of privacy and/or old technics</div>
+
+            <div style="display: flex;">
+                <table width="33.33%">
+                    <tr>
+                        <td>
+                            <div class="item software">
+                                <div>
+                                    <span class="title">Parsing Math</span>
+                                    <a class="address" href=""><i
+                                            class="material-icons">launch</i>View</a>
+                                    <span class="desc">Simple calculator.</span>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <div class="item software">
+                                <div>
+                                    <span class="title">Eratosphen</span>
+                                    <a class="address" href=""><i
+                                            class="material-icons">launch</i>View</a>
+                                    <span class="desc">Task is considered to such problem as finding quadro of the number.</span>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                </table>
+
+                <table width="33.33%">
+                    <tr>
+                        <td>
+                            <div class="item software">
+                                <div>
+                                    <span class="title">Top Eleven</span>
+                                    <a class="address" href=""><i
+                                            class="material-icons">launch</i>View</a>
+                                    <span class="desc">Logical task the main problem of which is to output all numbers of user inputted digits which is divided on 11 in rising order.</span>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                </table>
+
+                <table width="33.33%">
+                    <tr>
+                        <td>
+                            <div class="item software">
+                                <div>
+                                    <span class="title">Sequence</span>
+                                    <a class="address" href=""><i
+                                            class="material-icons">launch</i>View</a>
+                                    <span class="desc">Very good logical problem which was solved.</span>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
